TESTS = runtests.sh

EXTRA_DIST = \
	runtests.sh \
	accum1.lm \
	accum2.lm \
	accum3.lm \
	accumbt1.lm \
	accumbt2.lm \
	accumbt3.lm \
	argv1.lm \
	argv2.lm \
	backtrack1.lm \
	backtrack2.lm \
	backtrack3.lm \
	binary1.lm \
	binary1.in \
	btscan1.lm \
	btscan2.lm \
	call1.lm \
	commitbt.lm \
	concat1.lm \
	concat2.lm \
	construct1.lm \
	construct2.lm \
	construct3.lm \
	constructex.lm \
	context1.lm \
	context2.lm \
	context3.lm \
	counting1.lm \
	counting2.lm \
	counting3.lm \
	counting4.lm \
	decl1.lm \
	decl2.lm \
	decl3.lm \
	div.lm \
	exit1.lm \
	exit2.lm \
	exit3.lm \
	export1.lm \
	factor1.lm \
	factor2.lm \
	factor3.lm \
	factor4.lm \
	factor5.lm \
	factor6.lm \
	forloop1.lm \
	forloop2.lm \
	forloop3.lm \
	func1.lm \
	func2.lm \
	func3.lm \
	generate1.lm \
	generate2.lm \
	heredoc.lm \
	ifblock1.lm \
	ignore1.lm \
	ignore2.lm \
	ignore3.lm \
	ignore4.lm \
	ignore5.lm \
	include1.lm \
	include1a.lmi \
	inpush1.lm \
	inpush1a.in \
	inpush1b.in \
	inpush1c.in \
	island.lm \
	lhs1.lm \
	liftattrs.lm \
	literal1.lm \
	lookup1.lm \
	mailbox.lm \
	matchex.lm \
	maxlen.lm \
	multiregion1.lm \
	multiregion2.lm \
	mutualrec.lm \
	namespace1.lm \
	nestedcomm.lm \
	order1.lm \
	order2.lm \
	parse1.lm \
	prints.lm \
	pull1.lm \
	pull2.lm \
	ragelambig1.lm \
	ragelambig2.lm \
	ragelambig3.lm \
	ragelambig4.lm \
	rediv.lm \
	reor1.lm \
	reor2.lm \
	reparse.lm \
	repeat1.lm \
	repeat2.lm \
	rhsref1.lm \
	rubyhere.lm \
	scope1.lm \
	sprintf.lm \
	string.lm \
	superid.lm \
	tags1.lm \
	tags2.lm \
	tags3.lm \
	tags4.lm \
	tcontext1.lm \
	til.lm \
	translate1.lm \
	translate2.lm \
	travs1.lm \
	treecmp1.lm \
	typeref1.lm \
	typeref2.lm \
	typeref3.lm \
	undofrag1.lm \
	undofrag2.lm \
	undofrag3.lm \
	while1.lm
