#!/bin/bash
#

# vim: syntax=sh

set -e

while getopts "h-:" opt; do
	case $opt in
		-)
			WITH=${OPTARG/=*/}
			VAL=${OPTARG/*=/}
			case $WITH in
				with-crack) WITH_CRACK=$VAL;;
				with-aapl) WITH_AAPL=$VAL;;
				with-colm) WITH_COLM=$VAL;;
				with-ragel) WITH_RAGEL=$VAL;;
				prefix) PREFIX=$VAL;;
			esac

		;;
	esac
done

set -x

cd public
./configure --with-crack=$WITH_CRACK --with-aapl=$WITH_AAPL --with-colm=$WITH_COLM --with-ragel=$WITH_RAGEL
cd ..

# END PUBLIC

set +x
OPTIND=0
while getopts "h-:" opt; do
	case $opt in
		-)
			WITH=${OPTARG/=*/}
			VAL=${OPTARG/*=/}
			case $WITH in
				with-genf) WITH_GENF=$VAL;;
			esac

		;;
	esac
done

set -x

cd cases
./configure --with-aapl=$WITH_AAPL --with-colm=$WITH_COLM --with-ragel=$WITH_RAGEL
cd ..

root=$(pwd)

cd genf/app1.d
./configure --prefix=$root/genf/inst/app1 --with-aapl=$WITH_AAPL --with-genf=$WITH_GENF
cd ../..

cd genf/kern1.d
./configure --prefix=$root/genf/inst/kern1 --with-aapl=$WITH_AAPL --with-genf=$WITH_GENF
cd ../..

cd genf/process1.d
./configure --prefix=$root/genf/inst/kern1 --with-aapl=$WITH_AAPL --with-genf=$WITH_GENF
cd ../..

# BEGIN PUBLIC

echo ./configure "$@" > config.log

rm -f Makefile
cp Makefile.in Makefile
chmod -w Makefile
