noinst_HEADERS = \
	avlbasic.h avlimel.h avlmap.h bstcommon.h compare.h insertsort.h \
	sbstset.h avlcommon.h avlimelkey.h avlmel.h bstmap.h dlcommon.h \
	mergesort.h sbsttable.h avlibasic.h avliset.h avlmelkey.h bstset.h \
	dlist.h quicksort.h svector.h avlikeyless.h avlitree.h avlset.h \
	bsttable.h dlistmel.h resize.h table.h avlimap.h avlkeyless.h avltree.h \
	bubblesort.h dlistval.h sbstmap.h vector.h

EXTRA_DIST = README COPYING

