noinst_HEADERS = \
	avlbasic.h avlcommon.h avlibasic.h avlikeyless.h avlimap.h \
	avlimel.h avlimelkey.h avliset.h avlitree.h avlkeyless.h avlmap.h \
	avlmel.h avlmelkey.h avlset.h avltree.h bstcommon.h bstmap.h bstset.h \
	bsttable.h bubblesort.h compare.h dlcommon.h dlist.h dlistmel.h \
	dlistval.h insertsort.h mergesort.h quicksort.h resize.h sbstmap.h \
	sbstset.h sbsttable.h svector.h table.h vector.h
